--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="FE1nrluRiC-O-4DXZ4ICWI4PGCs8joa35YApc20qVP0" />
 <meta charset="UTF-8">
 <title>National Health Mission (NHM) India Explained | Dr. Pothireddy Surendranath Reddy</title>
 <meta name="description" content="National Health Mission (NHM) India explained by Dr. Pothireddy Surendranath Reddy – Orthopaedic Surgeon, Medical Educator, Public Health Contributor.">
